--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "@mui/material": "^6.4.6",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.9",
-    "date-fns": "^4.1.0",
+    "lucide-react": "^0.482.0",
     "react": "^19.0.0",
-    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
