GOBE-56: many feature

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,21 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
-        <!-- Google <API Client phiên bản 2.0.0 -->
+
+        <!-- https://mvnrepository.com/artifact/io.github.cdimascio/dotenv-java -->
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>rekognition</artifactId>
+            <version>2.20.50</version>
+        </dependency>
+
+
         <dependency>
             <groupId>com.google.api-client</groupId>
             <artifactId>google-api-client</artifactId>
