--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "@mui/material": "^6.4.6",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.9",
+    "@tinymce/tinymce-react": "^6.0.0",
+    "axios": "^1.8.4",
     "jsonwebtoken-esm": "^2.0.1",
     "lucide-react": "^0.479.0",
-    "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.4.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.1",
