--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@mui/material": "^6.4.6",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.9",
-    "jsonwebtoken-esm": "^2.0.1",
-    "lucide-react": "^0.479.0",
     "axios": "^1.8.4",
+    "jsonwebtoken-esm": "^2.0.1",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
