--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "swiper": "^11.2.6",
     "yup": "^1.6.1"
