GOBE-68 Challenge Feature 1.1.0 Fix layout and Challenge Participation

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@tailwindcss/vite": "^4.0.9",
     "@tinymce/tinymce-react": "^6.1.0",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.6.3",
     "jsonwebtoken-esm": "^2.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
