--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.6.3",
+    "i18next": "^24.2.3",
     "jsonwebtoken-esm": "^2.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
@@ -27,9 +28,11 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-toast": "^1.0.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "swiper": "^11.2.6",
