--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken-esm": "^2.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
