--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "@tinymce/tinymce-react": "^6.1.0",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.6.3",
@@ -26,6 +27,7 @@
     "lucide-react": "^0.479.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
