--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-rating": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-toast": "^1.0.3",
